adding profile picture functionality
